# rororo

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  .python-version  .readthedocs.yml  .travis.yml  CHANGELOG.rst  LICENSE  MANIFEST.in  Makefile  README.rst  app.py  circle.yml  dotenv.sh  mypy.ini  poetry.toml  pyproject.toml  pytest.ini  python.mk  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tests.py  tox.ini  views.py
.circleci/: config.yml
.github/: dependabot.yml
.github/actions/install_badabump/: action.yml
.github/actions/install_python_and_poetry/: action.yml
.github/actions/run_pre_commit/: action.yml
.github/actions/run_tox/: action.yml
.github/workflows/: ci.yml  ci_package.yml  ci_release.yml  ci_verify_docs_build.yml  release_pr.yml  release_tag.yml
docs/: Makefile  api.rst  changelog.rst  conf.py  index.rst  openapi.rst  openapi_errors.rst  openapi_issues.rst  openapi_speedups.rst  requirements-sphinx.in  requirements-sphinx.txt  requirements.in  requirements.txt  settings.rst
examples/commentor/: app.py  settings.py  tests.py  views.py
examples/commentor/static/css/: screen.css
examples/commentor/static/js/: commentor.js
examples/commentor/templates/: comments.html  index.html
examples/explorer/: app.py  commands.py  settings.py  tests.py  views.py
examples/explorer/static/: style.css
examples/explorer/templates/: explorer.html
examples/hobotnica/: README.rst  app.py  auth.py  data.py  decorators.py  exceptions.py  openapi.yaml  tests.py  views.py
examples/hobotnica/src/hobotnica/: app.py  auth.py  decorators.py  openapi.yaml  settings.py  views.py
examples/petstore/: README.rst  app.py  data.py  exceptions.py  petstore-expanded.yaml  settings.py  shortcuts.py  tests.py  views.py
examples/petstore/src/petstore/: app.py  data.py  settings.py  shortcuts.py  views.py
examples/simulations/: README.rst  app.py  openapi.yaml  storage.py  tests.py
examples/simulations/src/simulations/: app.py  openapi.yaml
examples/star_wars/: Procfile  manage.py
examples/star_wars/a_new_hope/: settings.py  views.py
examples/star_wars/a_new_hope/static/css/: a_new_hope.css
examples/star_wars/a_new_hope/templates/: a_new_hope.html
examples/star_wars/attack_of_the_clones/: settings.py  views.py
examples/star_wars/attack_of_the_clones/static/css/: attack_of_the_clones.css
examples/star_wars/attack_of_the_clones/templates/: attack_of_the_clones.html
examples/star_wars/return_of_the_jedi/: settings.py
examples/star_wars/return_of_the_jedi/static/css/: return_of_the_jedi.css
examples/star_wars/return_of_the_jedi/templates/: return_of_the_jedi.html
examples/star_wars/revenge_of_the_sith/: settings.py  views.py
examples/star_wars/revenge_of_the_sith/static/css/: revenge_of_the_sith.css
examples/star_wars/revenge_of_the_sith/templates/: revenge_of_the_sith.html
examples/star_wars/star_wars/: app.py  settings.py  tests.py  views.py
examples/star_wars/star_wars/static/css/: star_wars.css
examples/star_wars/star_wars/templates/: index.html
examples/star_wars/the_empire_strikes_back/: settings.py
examples/star_wars/the_empire_strikes_back/static/css/: the_empire_strikes_back.css
examples/star_wars/the_empire_strikes_back/templates/: the_empire_strikes_back.html
examples/star_wars/the_phantom_menace/: settings.py  views.py
examples/star_wars/the_phantom_menace/static/css/: the_phantom_menace.css
examples/star_wars/the_phantom_menace/templates/: the_phantom_menace.html
examples/todobackend/: README.rst  app.py  data.py  openapi.yaml  settings.py  storage.py  tests.py  views.py
examples/todobackend/src/todobackend/: app.py  constants.py  data.py  openapi.yaml  settings.py  storage.py  validators.py  views.py
examples/vc-api/: README.rst
examples/vc-api/src/vc_api/: app.py  examples.py  vc-api.yaml  views.py
rororo/: __init__.py  aio.py  annotations.py  app.py  compat.py  exceptions.py  logger.py  manager.py  routes.py  schema.py  settings.py  static.py  tests.py  timedelta.py  utils.py  views.py
rororo/openapi/: __init__.py  constants.py  contexts.py  converters.py  core_data.py  core_validators.py  data.py  decorators.py  exceptions.py  mappings.py  middlewares.py  openapi.py  security.py  utils.py  validators.py  views.py
rororo/schemas/: __init__.py  empty.py  exceptions.py  schema.py  utils.py  validators.py
src/rororo/: __init__.py  aio.py  annotations.py  logger.py  settings.py  timedelta.py  utils.py
src/rororo/openapi/: __init__.py  annotations.py  constants.py  contexts.py  core_data.py  core_validators.py  data.py  exceptions.py  middlewares.py  openapi.py  security.py  utils.py  validators.py  views.py
templates/: template.html
tests/: invalid-openapi.json  invalid-openapi.yaml  openapi.json  openapi.yaml  settings.py  settings_error.py  test_aio.py  test_logger.py  test_openapi.py  test_openapi_core_validators.py  test_openapi_exceptions.py  test_openapi_middlewares.py  test_openapi_openapi.py  test_openapi_utils.py  test_openapi_validators.py  test_schemas.py  test_settings.py  test_timedelta.py  test_utils.py
tests/examples/hobotnica/: test_hobotnica.py
tests/examples/petstore/: test_petstore.py
tests/examples/simulations/: test_simulations.py
tests/examples/todobackend/: conftest.py  test_todobackend.py  test_todobackend_storage.py
tests/examples/vc_api/: test_views.py
tests/rororo/: openapi.json  openapi.yaml  settings_error.py  test_aio.py  test_logger.py  test_openapi.py  test_openapi_core_data.py  test_openapi_core_validators.py  test_openapi_exceptions.py  test_openapi_middlewares.py  test_openapi_openapi.py  test_openapi_utils.py  test_settings.py  test_timedelta.py  test_utils.py
tests/schemas/: __init__.py  array.py  default_values.py  index.py  no_request.py  no_response.py  null_request.py  null_response.py  project_page.py
