[tool.badabump]
version_type = "semver"
version_files = [
  "./pyproject.toml",
  "./src/rororo/__init__.py",
  "./tests/rororo/openapi.json",
  "./tests/rororo/openapi.yaml",
]

[tool.black]
line_length = 79
target_version = ["py36"]

[tool.coverage.run]
branch = true
source = ["rororo"]

[tool.coverage.paths]
source = ["./src/"]

[tool.coverage.report]
fail_under = 95
skip_covered = true
show_missing = true

[tool.isort]
profile = "attrs"
combine_as_imports = true
force_alphabetical_sort_within_sections = true
lines_between_types = 0
src_paths = [
  "./",
  "./examples/hobotnica/src/",
  "./examples/petstore/src/",
  "./examples/simulations/src/",
  "./examples/todobackend/src/",
  "./src/",
]
virtual_env = "./.venv/"

[tool.mypy]
allow_untyped_globals = true
check_untyped_defs = true
disallow_any_decorated = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
follow_imports = "normal"
follow_imports_for_stubs = true
ignore_missing_imports = false
namespace_packages = true
mypy_path = "./src/"
python_executable = "./.venv/bin/python3"
show_column_numbers = true
show_error_codes = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
  "conftest",
  "migrations.*",
  "tests.*",
  "*.tests",
]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
  "aioredis.*",
  "email_validator.*",
  "environ.*",
  "isodate.*",
  "jsonschema.*",
  "openapi_core.*",
  "openapi_schema_validator.*",
]
ignore_missing_imports = true

[tool.poetry]
name = "rororo"
version = "3.0.0"
description = "aiohttp.web OpenAPI 3 schema first server applications."
authors = ["Igor Davydenko <iam@igordavydenko.com>"]
license = "BSD-3-Clause"
readme = "README.rst"
homepage = "https://igordavydenko.com/projects/#rororo"
repository = "https://github.com/playpauseandstop/rororo"
documentation = "https://rororo.readthedocs.io/"
packages = [
  {include = "rororo", from = "src/"},
]
keywords = [
  "aiohttp",
  "aiohttp.web",
  "oas",
  "openapi",
  "openapi schema",
  "openapi3",
  "schema first",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Web Environment",
  "Framework :: AsyncIO",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Internet :: WWW/HTTP :: WSGI",
  "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
  "Topic :: Utilities",
  "Typing :: Typed"
]

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.7.0"
aiohttp-middlewares = ">=1.2.0,<3"
attrs = ">=19.2.0,<23"
contextvars = {python = "<3.7", version = "^2.4"}
email-validator = "^1.0.5"
environ-config = ">=20.1,<23"
isodate = "^0.6.0"
openapi-core = ">=0.13.4,<0.13.7"
pyrsistent = ">=0.16,<0.19"
PyYAML = ">=5.1,<7.0"
typing-extensions = {python = "<3.8", version = ">=3.7,<5.0"}

[tool.poetry.dev-dependencies]
aioredis = {extras = ["hiredis"], version = "^2.0.1"}
async_generator = {python = "~3.6", version = "^1.10"}
coverage = {extras = ["toml"], version = "^6.4.3"}
coveralls = "^3.3.1"
mypy = "^0.971"
pytest = "^7.1.2"
pytest-aiohttp = "^1.0.4"
pytest-cov = "^3.0.0"
pytest-env = "^0.6.2"
types-PyYAML = "^6.0.11"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/playpauseandstop/rororo/issues"

[tool.pytest.ini_options]
minversion = "7.1.2"
testpaths = ["./tests/"]
addopts = "--cov --no-cov-on-fail"
env = """
LEVEL=test
"""
log_level = "info"
asyncio_mode = "auto"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py37,py38,py39,py310,py310-minimum-requirements,py311
skipsdist = True

[gh-actions]
python =
  3.7: py37
  3.8: py38
  3.9: py39
  3.10: py310
  3.11: py311

[testenv]
passenv =
  PYTHONPATH
  PYTEST_ADDOPTS
  REDIS_URL
setenv =
  USER=playpauseandstop
skip_install = True
whitelist_externals = poetry
commands_pre =
  poetry install
commands =
  poetry run python3 -m pytest

[testenv:py310-minimum-requirements]
commands_pre =
  poetry install
  poetry run python3 -m pip install \
    aiohttp==3.7.0 \
    aiohttp-middlewares==1.2.0 \
    attrs==19.2.0 \
    email-validator==1.0.5 \
    environ-config==20.1.0 \
    jsonschema==3.2.0 \
    openapi-core==0.13.4 \
    pyrsistent==0.16 \
    PyYAML==5.1
"""

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
