[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.badabump]
version_type = "semver"
version_files = [
  "pyproject.toml",
  "src/rororo/__init__.py",
  "tests/rororo/openapi.json",
  "tests/rororo/openapi.yaml",
]

[tool.black]
line_length = 79
target_version = ["py37"]

[tool.coverage.run]
branch = true
source = ["rororo"]

[tool.coverage.paths]
source = ["src/"]

[tool.coverage.report]
exclude_lines = [
  "if TYPE_CHECKING:",
  "@overload",
]
omit = [
  "src/*/main.py",
  "src/*/annotations.py",
]
fail_under = 95
skip_covered = true
show_missing = true

[tool.isort]
profile = "attrs"
combine_as_imports = true
force_alphabetical_sort_within_sections = true
lines_between_types = 0
src_paths = [
  "",
  "examples/hobotnica/src/",
  "examples/petstore/src/",
  "examples/simulations/src/",
  "examples/todobackend/src/",
  "src/",
]
virtual_env = ".venv/"

[tool.mypy]
allow_untyped_globals = true
check_untyped_defs = true
disallow_any_decorated = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
exclude = ["docs/", "migrations/", "tests/"]
follow_imports = "normal"
follow_imports_for_stubs = true
ignore_missing_imports = false
namespace_packages = true
no_implicit_optional = true
mypy_path = "src/"
python_executable = ".venv/bin/python3"
show_column_numbers = true
show_error_codes = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
  "email_validator.*",
  "environ.*",
  "isodate.*",
  "jsonschema.*",
  "openapi_core.*",
  "openapi_schema_validator.*",
]
ignore_missing_imports = true

[tool.poetry]
name = "rororo"
version = "3.1.0"
description = "aiohttp.web OpenAPI 3 schema first server applications."
authors = ["Igor Davydenko <iam@igordavydenko.com>"]
license = "BSD-3-Clause"
readme = "README.rst"
homepage = "https://igordavydenko.com/projects/#rororo"
repository = "https://github.com/playpauseandstop/rororo"
documentation = "https://rororo.readthedocs.io/"
packages = [
  {include = "rororo", from = "src/"},
]
keywords = [
  "aiohttp",
  "aiohttp.web",
  "oas",
  "openapi",
  "openapi schema",
  "openapi3",
  "schema first",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Web Environment",
  "Framework :: AsyncIO",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Internet :: WWW/HTTP :: WSGI",
  "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
  "Topic :: Utilities",
  "Typing :: Typed"
]

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.8.1"
aiohttp-middlewares = ">=1.2.0,<3"
attrs = ">=19.2.0,<23"
email-validator = "^1.0.5"
environ-config = ">=20.1,<23"
isodate = "^0.6.0"
openapi-core = ">=0.13.4,<0.13.7"
openapi-spec-validator = "0.4.0"
pyrsistent = ">=0.16,<0.20"
pyyaml = ">=5.1,<7.0"
typing-extensions = {python = "<3.8", version = ">=3.7,<5"}

[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
types-pyyaml = "^6.0.12.2"
types-redis = "^4.3.21.6"

[tool.poetry.group.test.dependencies]
coverage = {extras = ["toml"], version = "^6.5.0"}
coveralls = "^3.3.1"
hiredis = "^2.0.0"
pytest = "^7.2.0"
pytest-aiohttp = "^1.0.4"
pytest-asyncio = "^0.20.2"
pytest-cov = "^4.0.0"
redis = "^4.4.0"

[tool.poetry.group.docs.dependencies]
furo = "^2022.9.29"
sphinx = "^5.3.0"
sphinx-autobuild = "^2021.3.14"
sphinx-autodoc-typehints = "^1.19.5"
sphinx-copybutton = "^0.5.1"
sphinxext-opengraph = "^0.7.3"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/playpauseandstop/rororo/issues"

[tool.pytest.ini_options]
minversion = "7.2.0"
testpaths = ["tests/"]
addopts = "--cov --no-cov-on-fail"
log_level = "info"
# Local pytest options
asyncio_mode = "auto"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py37,py38,py39,py310,py310-minimum-requirements,py311
skipsdist = True

[gh-actions]
python =
  3.7: py37
  3.8: py38
  3.9: py39
  3.10: py310
  3.11: py311

[testenv]
passenv =
  PYTHONPATH
  PYTEST_ADDOPTS
  REDIS_URL
  LEVEL
setenv =
  USER=playpauseandstop
skip_install = True
whitelist_externals = poetry
commands_pre =
  poetry install --only main,test
commands =
  poetry run python3 -m pytest

[testenv:py310-minimum-requirements]
commands_pre =
  poetry install --only main,test
  poetry run python3 -m pip install \
    aiohttp==3.8.1 \
    aiohttp-middlewares==1.2.0 \
    attrs==19.2.0 \
    email-validator==1.0.5 \
    environ-config==20.1.0 \
    jsonschema==3.2.0 \
    openapi-core==0.13.4 \
    pyrsistent==0.16 \
    PyYAML==5.1
"""
